project-1/style.css
#main-wrap{
	margin: 0 auto;
	width: 50%;
}

#output{
	height: 150px;
	width: 900px;
	background-color: #CCEEFF;
	font-size: 110%;
/*	background-image: url("images/box-bg.png");
	background-repeat: no-repeat;
	background-size: cover;
	padding: 20px;*/
}

/*#outputP{
	height: 100px;
	width: 800px;
	margin: 0 auto;
	overflow: auto;
}*/

#main-img{
	height: 450px;
	width: 900px;
}

#main-img img{
	max-height: 100%;
}

#overlay {
  position: fixed; /* Sit on top of the page content */
  display: none; /* Hidden by default */
  width: 900px; /* Full width (cover the whole page) */
  height: 100%; /* Full height (cover the whole page) */
  top: 0;
  margin: 0 auto;
  bottom: 0;
  color: white;
  font-size: 110%;
  text-align: center;
  align-items: center;
  background-color: rgba(0,0,0, 0.8); /* Black background with opacity at 80%*/
  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
  cursor: pointer; /* Add a pointer on hover */
}

#overlay span{
	margin: 0 auto;
}

h1 {
	font-family: 'Lato', sans-serif;
	text-align: center;
}

p{
	font-family: 'Lora', serif;
}

#monsterdiv img{
	  position: relative;
    top: -200px;
    left: 570px;
}

#allbtns{
	  display: flex;
    justify-content: space-around;
    width: 900px;
    height: 500px;
}

#mapdiv img{
	width: 200px;
}


#movebtns{
	height: 200px;
	width: 200px;
}

#btn-north{
	position: relative;
  left: 70px;
}

#btn-south{
	position: relative;
    top: 100px;
}

#btn-east{
	position: relative;
    top: 45px;
}

#btn-west{
	position: relative;
    top: 9px;
}

